test/earlyReturn7.slq

def main(){
	x:=H(0:ğ”¹); // error
	if x{
		return 1;
	}
	measure(x);
	return 0;
	/+x:=measure(x);
	return x;+/
}
